# Go-Python-Runner

./: .gitignore  CLAUDE.md  Makefile  README.md  Taskfile.yml  go.mod  go.sum  main.go  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
internal/db/: db.go  db_concurrent_test.go  db_test.go
internal/logging/: logger.go  logger_test.go  ring.go  ring_test.go
internal/notify/: notify.go  notify_test.go  testing.go
internal/registry/: registry.go  registry_fuzz_test.go  registry_test.go  watcher.go  watcher_test.go
internal/runner/: cache.go  cache_test.go  dialog.go  grpc_server.go  grpc_server_fuzz_test.go  grpc_server_test.go  manager.go  manager_test.go  process.go  process_test.go  process_unix.go  process_windows.go  shm_unix.go  shm_windows.go
internal/services/: env_service.go  env_service_test.go  log_service.go  log_service_test.go  runner_service.go  runner_service_test.go  script_service.go  script_service_test.go
proto/: runner.proto
python/: README.md  requirements.txt
scripts/_lib/: runner.py
scripts/cache_consume/: main.py  script.json
scripts/cache_produce/: main.py  script.json
scripts/data_processor/: main.py  script.json
scripts/db_keyvalue/: main.py  script.json
scripts/db_run_history/: main.py  script.json
scripts/db_todo/: main.py  script.json
scripts/error_stages/: main.py  script.json
scripts/file_export/: main.py  script.json
scripts/hello_world/: main.py  script.json
scripts/numpy_stats/: main.py  script.json
(+59 files in other folders)
